<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGray"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvBookCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textSize="24dp" />

        <LinearLayout
            android:id="@+id/lnrDetailHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/darkGray"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivBookImage"
                android:layout_width="@dimen/book_detail_image_width"
                android:layout_height="@dimen/book_detail_image_height"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:scaleType="fitXY"
                android:src="@drawable/book_placeholder" />

            <TextView
                android:id="@+id/tvBookName"
                style="@style/TextDetailStyle"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="3"
                android:maxLines="5"
                android:textSize="18dp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:background="@drawable/divider" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/detail_row_margin_left"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/detail_text_margin"
                        android:gravity="center_vertical"
                        android:text="@string/book_category"
                        style="@style/TextDetailTitleStyle"
                        android:textSize="@dimen/detail_row_title_text_size" />

                    <TextView
                        android:id="@+id/tvBookCategory"
                        style="@style/TextDetailStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/detail_text_margin"
                        android:maxLines="2"
                        android:textSize="@dimen/detail_text_size" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/divider_height"
                    android:background="@drawable/divider" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/detail_row_margin_left"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/detail_text_margin"
                        android:gravity="center_vertical"
                        android:text="@string/book_remain"
                        style="@style/TextDetailTitleStyle"
                        android:textSize="@dimen/detail_row_title_text_size" />

                    <TextView
                        android:id="@+id/tvBookRemain"
                        style="@style/TextDetailStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/detail_text_margin"
                        android:maxLines="2"
                        android:textSize="@dimen/detail_text_size" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/divider_height"
                    android:background="@drawable/divider" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/detail_row_margin_left"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/detail_text_margin"
                        android:gravity="center_vertical"
                        android:text="@string/book_publisher"
                        style="@style/TextDetailTitleStyle"
                        android:textSize="@dimen/detail_row_title_text_size" />

                    <TextView
                        android:id="@+id/tvBookPublisher"
                        style="@style/TextDetailStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/detail_text_margin"
                        android:maxLines="2"
                        android:textSize="@dimen/detail_text_size" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/divider_height"
                    android:background="@drawable/divider" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/detail_row_margin_left"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/detail_text_margin"
                        android:gravity="center_vertical"
                        android:text="@string/book_publish_year"
                        style="@style/TextDetailTitleStyle"
                        android:textSize="@dimen/detail_row_title_text_size" />

                    <TextView
                        android:id="@+id/tvBookPublishYear"
                        style="@style/TextDetailStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/detail_text_margin"
                        android:maxLines="2"
                        android:text=""
                        android:textSize="@dimen/detail_text_size" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/divider_height"
                    android:background="@drawable/divider" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/detail_row_margin_left"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/detail_text_margin"
                        android:gravity="center_vertical"
                        android:text="@string/book_supplier_name"
                        style="@style/TextDetailTitleStyle"
                        android:textSize="@dimen/detail_row_title_text_size" />

                    <TextView
                        android:id="@+id/tvBookSupplierName"
                        style="@style/TextDetailStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/detail_text_margin"
                        android:maxLines="2"
                        android:text=""
                        android:textSize="@dimen/detail_text_size" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/divider_height"
                    android:background="@drawable/divider" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/detail_row_margin_left"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/detail_text_margin"
                        android:gravity="center_vertical"
                        android:text="@string/book_author"
                        style="@style/TextDetailTitleStyle"
                        android:textSize="@dimen/detail_row_title_text_size" />

                    <TextView
                        android:id="@+id/tvBookAuthor"
                        style="@style/TextDetailStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/detail_text_margin"
                        android:text=""
                        android:textSize="@dimen/detail_text_size" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/divider_height"
                    android:background="@drawable/divider" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/detail_row_margin_left"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/detail_text_margin"
                        android:gravity="center_vertical"
                        android:text="@string/book_description"
                        style="@style/TextDetailTitleStyle"
                        android:textSize="@dimen/detail_row_title_text_size" />

                    <TextView
                        android:id="@+id/tvBookDescription"
                        style="@style/TextDetailStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/detail_text_margin"
                        android:textSize="@dimen/detail_text_size" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/divider_height"
                    android:background="@drawable/divider" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/detail_row_margin_left"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/detail_text_margin"
                        android:gravity="center_vertical"
                        android:text="@string/book_short_description"
                        style="@style/TextDetailTitleStyle"
                        android:textSize="@dimen/detail_row_title_text_size" />

                    <TextView
                        android:id="@+id/tvBookShortDescription"
                        style="@style/TextDetailStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/detail_text_margin"
                        android:textSize="@dimen/detail_text_size" />
                </LinearLayout>

            </LinearLayout>

        </ScrollView>


    </LinearLayout>
</LinearLayout>
